# Quick.AI

./: .gitignore  CLAUDE.md  README.md  build_android.sh  build_windows.ps1  chat_template.cpp  chat_template.h  factory.h  install_android.sh  llm_util.cpp  main.cpp  meson.build  meson_options.txt  repeat_perf_test.py  tokenizers_cpp.h
.github/actions/override-submodules-from-pr/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-android.yml  ci-linux.yml  codeql.yml  labeler.yml
api/: README.md  causal_lm_api.cpp  causal_lm_api.h  model_config.cpp  model_config_internal.h  test_api.cpp
benchmarks/: benchmark_android.py
docs/: architecture.md  openai_server.md
jni/: Android.mk
layers/: embedding_normalize_layer.h  embedding_pooling_layer.cpp  embedding_pooling_layer.h  lm_head.cpp  lm_head.h  meson.build  mha_core.cpp  mha_core.h  tie_word_embedding.cpp  tie_word_embedding.h
models/: causal_lm.cpp  causal_lm.h  embedding.cpp  embedding.h  meson.build  performance_metrics.h  sentence_transformer.cpp  sentence_transformer.h  transformer.cpp  transformer.h  transformer_base.h
models/gemma3/: embedding_gemma.cpp  embedding_gemma.h  function.cpp  gemma3_causallm.cpp  meson.build
models/gpt_oss/: gpt_oss_moe_layer.cpp  gpt_oss_moe_layer.h  gptoss_causallm.h
models/gpt_oss_cached_slim/: gpt_oss_moe_layer_cached.cpp  gpt_oss_moe_layer_cached.h  gptoss_cached_slim_causallm.h
models/qwen3/: qwen3_causallm.cpp  qwen3_causallm.h
models/qwen3_cached_slim_moe/: qwen3_cached_slim_moe_causallm.h  qwen_moe_layer_cached.cpp  qwen_moe_layer_cached.h
models/qwen3_moe/: qwen3_moe_causallm.h  qwen_moe_layer.h
models/qwen3_slim_moe/: qwen3_slim_moe_causallm.h  qwen_moe_layer_fsu.h
res/gpt-oss-20b/: nntr_config.json
res/qwen3-30b-a3b/: nntr_config.json
res/qwen3-30b-a3b-slim-cached/: nntr_config.json
res/qwen3-4b/: nntr_config.json
res/qwen3/qwen3-4b/: nntr_config.json
server/: openai_protocol.cpp  openai_protocol.h  openai_server.cpp
subprojects/: gtest.wrap
test/: README.md  meson.build  unittest_causal_lm_api.cpp  unittest_factory.cpp  unittest_llm_util.cpp  unittest_model_config.cpp  unittest_openai_protocol.cpp  unittest_tokenizer.cpp
test/scripts/: download_qwen3_0.6b.sh  run_unittests.sh
tools/pyutils/: generate_def.py
